Use global makefile settings for DMC

--- a/make/msw/dos16/dmc/makefile.ini
+++ b/make/msw/dos16/dmc/makefile.ini
@@ -8,126 +8,22 @@
 #
 
 
-############################
-#     Compiler options     #
-############################
-
-# Suffix of object file names.
-# (cannot be empty)
-OBJ_SFX := obj
+# The target flags.
+CFLAGS_TARGET := -ms
 
 
-# ANSI-C compiler settings.
+# Include default DMC definitions.
+include ../../setup/dmc.ini
 
-# The compiler executable.
-CC := dmc
-
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS := -ms
 
 # Using response file to avoid "line-too-long" problem.
 CC_USE_RESPONSE_FILE := 1
 
-# Output name flag.
-CC_OUT := -o
-# Compile-only flag.
-CC_COMPILE_ONLY := -c
-# Macro definition flag.
-CC_DEFINE := -D
-# Include directory flag.
-CC_INCLUDE := -I
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -g -D -o-all
-CFLAGS_RELEASE := -w -o
-
-
-# C++ compiler settings.
-
-# The compiler executable.
-CXX := $(CC)
-
-# The compiler global flags.
-# (used standardized name CXXFLAGS, which can be
-# overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -Ae -Ar
-
 # Using response file to avoid "line-too-long" problem.
 CXX_USE_RESPONSE_FILE := $(CC_USE_RESPONSE_FILE)
 
-# Output name flag.
-CXX_OUT := $(CC_OUT)
-# Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
-# Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
-# Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
-
-# Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-
-
-##########################
-#     Linker options     #
-##########################
-
-# The linker global flags.
-# (used standardized name LDFLAGS, which can be
-# overridden on the make command line)
-LDFLAGS := -L/nologo -L/nomap
-
-# Suffix of object libraries.
-# (cannot be empty)
-LIB_SFX := lib
-
-
-# C++ linker settings.
-
-# The linker executable.
-LNKC := $(CXX)
-
-# The linker global flags.
-# (includes standard name LDFLAGS, which can be
-# overridden on the make command line)
-LNKC_FLAGS := $(LDFLAGS)
-
 # Using response file to avoid "line-too-long" problem.
 LNKC_USE_RESPONSE_FILE := $(CXX_USE_RESPONSE_FILE)
-
-# Output name flag.
-LNKC_OUT := $(CXX_OUT)
-
-# Flags for different build configurations.
-LNKC_FLAGS_DEBUG := -L/debug
-LNKC_FLAGS_RELEASE :=
-
-LNKC_LIB_SFX := .$(LIB_SFX)
-
-
-# C++ librarian compiler settings.
-
-# The librarian executable.
-LIBC := dmlib
-
-# The librarian global flags.
-LIBC_FLAGS := -c
-
-# Output name flag.
-LIBC_OUT :=
-
-
-# Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = *.bak
-MXCPP_CLEAN_MASK_DEBUG = 
-MXCPP_CLEAN_MASK_TEST = 
-MXCPP_CLEAN_MASK_TEST_DEBUG = 
-
-# Addditional clean masks for 'cleanall...' targets.
-MXCPP_CLEANALL_MASK = *.map
 
 
 # Include parent definitions.
