--- a/make/msw/setup/dmc.ini
+++ b/make/msw/setup/dmc.ini
@@ -25,7 +25,7 @@ CC := dmc
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := -mn
+CFLAGS := $(CFLAGS_TARGET)
 
 # Output name flag.
 CC_OUT := -o
@@ -39,10 +39,6 @@ CC_INCLUDE := -I
 # Flags for different build configurations.
 CFLAGS_DEBUG := -g -D -o-all
 CFLAGS_RELEASE := -w -o
-CFLAGS_LIB := -WA
-CFLAGS_LIBMT := -WA
-CFLAGS_DLL_DLL := -WD
-CFLAGS_DLL_EXE := -WA
 
 
 # C++ compiler settings.
@@ -182,9 +178,5 @@ MXCPP_CLEAN_MASK_TEST_DEBUG =
 MXCPP_CLEANALL_MASK = *.map
 MXCPP_CLEANALL_MASK_DLL = $(2:.dll=.lib) $(2:.dll=.map)
 MXCPP_CLEANALL_MASK_DLL_DEBUG = 
-
-
-# Include parent definitions.
-include ../system.ini
 
 # EOF #
