Log warnings and tests
Log the compile warnings and test outputs.

--- a/make/msw/win16/system.ini
+++ b/make/msw/win16/system.ini
@@ -39,7 +39,7 @@ include ../../platform.ini
 
 # Library main build types - only libs and DLLs allowed.
 # (Win16 does not support multithreading (?))
-MXCPP_TARGET_TYPE_SHARE := LIB LIBMT DLL
+MXCPP_TARGET_TYPE_SHARE := LIB DLL
 
 # Library build subtypes - only ANSI build type allowed.
 # (Win16 does not support UNICODE)
