--- a/make/msw/win32/msvc8/makefile.ini
+++ b/make/msw/win32/msvc8/makefile.ini
@@ -26,6 +26,13 @@ LDFLAGS_TARGET := /machine:I386
 include ../../setup/msvc.ini
 
 
+# Addditional clean masks for 'clean...' targets.
+MXCPP_CLEAN_MASK_TEST += $(1)*.manifest
+
+# Addditional clean masks for 'cleanall...' targets.
+MXCPP_CLEANALL_MASK_DLL += $(2).manifest
+
+
 # Include parent definitions.
 include ../system.ini
 
