--- a/make/msw/dos32/dmc/makefile.ini
+++ b/make/msw/dos32/dmc/makefile.ini
@@ -9,8 +9,7 @@
 
 
 # The target flags.
-CFLAGS_TARGET := -mx
-
+CFLAGS_TARGET := -mxd
 
 # Include default DMC definitions.
 include ../../setup/dmc.ini
@@ -21,6 +20,9 @@ CC_USE_RESPONSE_FILE := 1
 
 # Using response file to avoid "line-too-long" problem.
 CXX_USE_RESPONSE_FILE := $(CC_USE_RESPONSE_FILE)
+
+# The target flags.
+LNKC_FLAGS += x32.lib
 
 # Using response file to avoid "line-too-long" problem.
 LNKC_USE_RESPONSE_FILE := $(CXX_USE_RESPONSE_FILE)
