Improve processing of compile warnings

--- a/make/msw/setup/dmc.ini
+++ b/make/msw/setup/dmc.ini
@@ -37,7 +37,7 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -g -D -o-all
+CFLAGS_DEBUG := -g -w- -D -o-all
 CFLAGS_RELEASE := -w -o
 
 
