--- a/make/setup/gcc.ini
+++ b/make/setup/gcc.ini
@@ -22,6 +22,10 @@ OBJ_SFX := o
 # The compiler executable.
 CC := gcc
 
+# The warning output file.
+# ('0' or '' for stdout, '2' for stderr)
+CC_WARNING_FILE := 2
+
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
@@ -47,6 +51,10 @@ CFLAGS_DLL_DLL := -fPIC
 
 # The compiler executable.
 CXX := g++
+
+# The warning output file.
+# ('0' or '' for stdout, '2' for stderr)
+CXX_WARNING_FILE := $(CC_WARNING_FILE)
 
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
@@ -75,6 +83,10 @@ CFLAGS_DEBUG += $(CFLAGS_DEBUG_EXTRA)
 
 # The compiler executable.
 RC := windres
+
+# The warning output file.
+# ('0' or '' for stdout, '2' for stderr)
+RC_WARNING_FILE := $(CXX_WARNING_FILE)
 
 # Suffix of compiled resource files.
 # (cannot be empty, if RC defined)
@@ -117,6 +129,10 @@ LIB_SFX := a
 # The linker executable.
 LNKC := $(CXX)
 
+# The warning output file.
+# ('0' or '' for stdout, '2' for stderr)
+LNKC_WARNING_FILE := $(CXX_WARNING_FILE)
+
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
@@ -138,6 +154,10 @@ LNKC_LIB_PFX := -l
 # The librarian executable.
 LIBC := ar
 
+# The warning output file.
+# ('0' or '' for stdout, '2' for stderr)
+LIBC_WARNING_FILE := 2
+
 # The librarian global flags.
 LIBC_FLAGS := r
 
@@ -149,6 +169,10 @@ LIBC_OUT :=
 
 # The linker executable.
 DLLC := $(LNKC)
+
+# The warning output file.
+# ('0' or '' for stdout, '2' for stderr)
+DLLC_WARNING_FILE := $(LNKC_WARNING_FILE)
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
