Global makefile settings for Unix/Linux compilers

--- a/make/unix/aix/system.ini
+++ b/make/unix/aix/system.ini
@@ -17,8 +17,8 @@ $(MXCPP_SRC_LIST_COMPILER)
 DLL_SFX := so
 
 # System configuration flags.
-#MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)AIX
-#MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)AIX
+MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)AIX
+MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)AIX
 
 MXCPP_LIBS_SYSTEM :=	\
 $(MXCPP_LIBS_COMPILER)
