--- a/make/unix/aix/xlc/makefile.ini
+++ b/make/unix/aix/xlc/makefile.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - GNU C++ (GCC) compiler (definitions).
+#     - IBM AIX (xlC) compiler (definitions).
 #
 # @author Emil Maskovsky
 #
@@ -20,16 +20,12 @@ OBJ_SFX := o
 # ANSI-C compiler settings.
 
 # The compiler executable.
-CC := gcc
-
-# The warning output file.
-# ('0' or '' for stdout, '2' for stderr)
-CC_WARNING_FILE := 2
+CC := xlC_r
 
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := $(CFLAGS_TARGET) -Winline -Winvalid-pch
+CFLAGS := $(CFLAGS_TARGET)
 
 # Output name flag.
 CC_OUT := -o 
@@ -41,25 +37,20 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -g3 -Wall -Wextra -Wfloat-equal -Wundef -Wendif-labels -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Wconversion -Waggregate-return -Wmissing-noreturn -Wmissing-format-attribute -Wpacked -Wpadded -Wredundant-decls -Wunreachable-code
-CFLAGS_DEBUG_EXTRA := -Wtraditional -Wdeclaration-after-statement -Wbad-function-cast -Wstrict-prototypes -Wold-style-definition -Wmissing-prototypes -Wmissing-declarations -Wnested-externs
-CFLAGS_RELEASE := -O2 -Wdisabled-optimization
-CFLAGS_DLL_DLL := -fPIC
+CFLAGS_DEBUG := -Wall -g3
+CFLAGS_RELEASE := -w -O2
+CFLAGS_DLL_DLL :=
 
 
 # C++ compiler settings.
 
 # The compiler executable.
-CXX := g++
-
-# The warning output file.
-# ('0' or '' for stdout, '2' for stderr)
-CXX_WARNING_FILE := $(CC_WARNING_FILE)
+CXX := $(CC)
 
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -fexceptions -frtti
+CXXFLAGS := $(CFLAGS)
 
 # Output name flag.
 CXX_OUT := $(CC_OUT)
@@ -71,39 +62,9 @@ CXX_DEFINE := $(CC_DEFINE)
 CXX_INCLUDE := $(CC_INCLUDE)
 
 # Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG) -Wabi -Wreorder -Wold-style-cast -Woverloaded-virtual -Wsign-promo -Wsynth
+CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
 CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
-
-
-CFLAGS_DEBUG += $(CFLAGS_DEBUG_EXTRA)
-
-
-# Resource compiler settings.
-
-# The compiler executable.
-RC := windres
-
-# The warning output file.
-# ('0' or '' for stdout, '2' for stderr)
-RC_WARNING_FILE := $(CXX_WARNING_FILE)
-
-# Suffix of compiled resource files.
-# (cannot be empty, if RC defined)
-RES_SFX := $(OBJ_SFX)
-
-# The compiler global flags.
-# (used standardized name RCFLAGS, which can be
-# overridden on the make command line)
-RCFLAGS :=
-
-# Output name flag.
-RC_OUT := -o
-
-# Macro definition flag.
-RC_DEFINE := -D
-# Include directory flag.
-RC_INCLUDE := -I
 
 
 ##########################
@@ -113,11 +74,11 @@ RC_INCLUDE := -I
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := -L.
+LDFLAGS := -L. -brtl
 
 # Prefix of object libraries.
 # (can be empty)
-LIB_PFX = lib
+LIB_PFX := lib
 
 # Suffix of object libraries.
 # (cannot be empty)
@@ -128,10 +89,6 @@ LIB_SFX := a
 
 # The linker executable.
 LNKC := $(CXX)
-
-# The warning output file.
-# ('0' or '' for stdout, '2' for stderr)
-LNKC_WARNING_FILE := $(CXX_WARNING_FILE)
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
@@ -154,10 +111,6 @@ LNKC_LIB_PFX := -l
 # The librarian executable.
 LIBC := ar
 
-# The warning output file.
-# ('0' or '' for stdout, '2' for stderr)
-LIBC_WARNING_FILE := 2
-
 # The librarian global flags.
 LIBC_FLAGS := r
 
@@ -170,14 +123,14 @@ LIBC_OUT :=
 # The linker executable.
 DLLC := $(LNKC)
 
-# The warning output file.
-# ('0' or '' for stdout, '2' for stderr)
-DLLC_WARNING_FILE := $(LNKC_WARNING_FILE)
+# Prefix of shared libraries.
+# (can be empty)
+DLL_PFX := $(LIB_PFX)
 
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LNKC_FLAGS) -shared
+DLLC_FLAGS := $(LNKC_FLAGS) -p 5000 -bnoentry -qmkshrobj
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
@@ -189,7 +142,10 @@ DLLC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_DLL)
 
 
 # Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK = *.o *.s
+MXCPP_CLEAN_MASK =
 
+
+# Include parent definitions.
+include ../system.ini
 
 # EOF #
