--- a/make/unix/hpux/gcc64/makefile.ini
+++ b/make/unix/hpux/gcc64/makefile.ini
@@ -8,145 +8,8 @@
 #
 
 
-############################
-#     Compiler options     #
-############################
-
-# Suffix of object file names.
-# (cannot be empty)
-OBJ_SFX := o
-
-
-# ANSI-C compiler settings.
-
-# The compiler executable.
-CC := gcc
-
-# The compiler global flags.
-# (used standardized name CFLAFS, which can be
-# overridden on the make command line)
-CFLAGS :=
-
-# Output name flag.
-CC_OUT := -o 
-# Compile-only flag.
-CC_COMPILE_ONLY := -c
-# Macro definition flag.
-CC_DEFINE := -D
-# Include directory flag.
-CC_INCLUDE := -I
-
-# Flags for different build configurations.
-CFLAGS_DEBUG := -Wall -g3
-CFLAGS_RELEASE := -w -O2
-CFLAGS_DLL_DLL := -fPIC
-
-
-# C++ compiler settings.
-
-# The compiler executable.
-CXX := g++
-
-# The compiler global flags.
-# (used standardized name CXXFLAGS, which can be
-# overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -fexceptions
-
-# Output name flag.
-CXX_OUT := $(CC_OUT)
-# Compile-only flag.
-CXX_COMPILE_ONLY := $(CC_COMPILE_ONLY)
-# Macro definition flag.
-CXX_DEFINE := $(CC_DEFINE)
-# Include directory flag.
-CXX_INCLUDE := $(CC_INCLUDE)
-
-# Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
-CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
-
-
-##########################
-#     Linker options     #
-##########################
-
-# The linker global flags.
-# (used standardized name LDFLAGS, which can be
-# overridden on the make command line)
-LDFLAGS :=
-
-# Prefix of object libraries.
-# (can be empty)
-LIB_PFX := lib
-
-# Suffix of object libraries.
-# (cannot be empty)
-LIB_SFX := a
-
-
-# C++ linker settings.
-
-# The linker executable.
-LNKC := $(CXX)
-
-# The linker global flags.
-# (includes standard name LDFLAGS, which can be
-# overridden on the make command line)
-LNKC_FLAGS := $(CXXFLAGS) $(LDFLAGS)
-
-# Output name flag.
-LNKC_OUT := $(CXX_OUT)
-# Library include directory flag.
-LNKC_INCLUDE := -L
-
-# Flags for different build configurations.
-LNKC_FLAGS_DEBUG := $(CXXFLAGS_DEBUG)
-LNKC_FLAGS_RELEASE := $(CXXFLAGS_RELEASE)
-LNKC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_EXE)
-
-LNKC_LIB_PFX := -l
-
-
-# C++ librarian compiler settings.
-
-# The librarian executable.
-LIBC := ar
-
-# The librarian global flags.
-LIBC_FLAGS := r
-
-# Output name flag.
-LIBC_OUT :=
-
-
-# C++ dynamic library linker settings.
-
-# The linker executable.
-DLLC := $(LNKC)
-
-# Prefix of shared libraries.
-# (can be empty)
-DLL_PFX := $(LIB_PFX)
-
-# The linker global flags.
-# (includes standard name LDFLAGS, which can be
-# overridden on the make command line)
-DLLC_FLAGS := $(LNKC_FLAGS) -pie -shared
-
-# Output name flag.
-DLLC_OUT := $(LNKC_OUT)
-# Library include directory flag.
-DLLC_INCLUDE := $(LNKC_INCLUDE)
-
-# Flags for different build configurations.
-DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
-DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
-DLLC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_DLL)
-
-
-# Addditional clean masks for 'clean...' targets.
-MXCPP_CLEAN_MASK =
+# Include default GCC definitions.
+include ../../../setup/gcc.ini
 
 
 # Include parent definitions.
