--- a/make/unix/hpux/system.ini
+++ b/make/unix/hpux/system.ini
@@ -17,8 +17,8 @@ $(MXCPP_SRC_LIST_COMPILER)
 DLL_SFX := sl
 
 # System configuration flags.
-#MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)HPUX
-#MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)HPUX
+MXCPP_CFLAGS_SYSTEM := $(CC_DEFINE)HPUX
+MXCPP_CXXFLAGS_SYSTEM := $(CXX_DEFINE)HPUX
 
 MXCPP_LIBS_SYSTEM :=	\
 $(MXCPP_LIBS_COMPILER)
