--- a/make/unix/sparc/makefile
+++ b/make/unix/sparc/makefile
@@ -15,7 +15,7 @@ include ../../bakedefs.ini
 
 
 # The list of compilers, which will be checked for current system.
-MXCPP_BATCHMAKE_COMPILERS := gcc32 gcc64
+MXCPP_BATCHMAKE_COMPILERS := gcc gcc32 gcc64
 
 
 $(foreach target,$(MXCPP_BATCHMAKE_TARGETS),$(eval $(call MXCPP_BATCHMAKE_RULES_TARGET,$(target),$(MXCPP_BATCHMAKE_COMPILERS))))
