Fix Unix/Linux makefiles

--- a/make/setup/gcc.ini
+++ b/make/setup/gcc.ini
@@ -170,6 +170,10 @@ LIBC_OUT :=
 # The linker executable.
 DLLC := $(LNKC)
 
+# Prefix of dynamic libraries.
+# (can be empty)
+DLL_PFX := $(LIB_PFX)
+
 # The warning output file.
 # ('0' or '' for stdout, '2' for stderr)
 DLLC_WARNING_FILE := $(LNKC_WARNING_FILE)
