Provide custom entry point

--- a/make/global.ini
+++ b/make/global.ini
@@ -31,6 +31,7 @@ MXCPP_LIBRARY_NAME := $(MXCPP_CONFIG_SUFFIX)cpp
 # Source files list.
 MXCPP_SRC_LIST =	\
 libmain.cpp	\
+entry.cpp	\
 debug.cpp	\
 Memory.cpp	\
 new.cpp	\
