--- a/doc/makefile.ini
+++ b/doc/makefile.ini
@@ -22,7 +22,7 @@ include ../make/global.ini
 
 
 # Basic name of the documentation file.
-MXCPP_CHM_NAME := $(MXCPP_LIBRARY_NAME)$(MXCPP_LIBRARY_VERSION_MAJOR)$(MXCPP_LIBRARY_VERSION_MINOR).chm
+MXCPP_CHM_NAME := $(MXCPP_CONFIG_SUFFIX)cfw$(MXCPP_LIBRARY_VERSION_MAJOR)$(MXCPP_LIBRARY_VERSION_MINOR).chm
 
 MXCPP_HTMLDOC_ROOT := html
 MXCPP_HTMLDOC_INDEX := index.html
