--- a/src/res/mxCppFw.rc
+++ b/src/res/mxCppFw.rc
@@ -19,7 +19,7 @@
 /**
     @file
 
-    Resource file for the Demo C++ Framework DLL.
+    Resource file for the @project DLL.
 
     @author Emil Maskovsky
 */
