Update the Unix makefiles

--- a/make/global.ini
+++ b/make/global.ini
@@ -221,10 +221,11 @@ MXCPP_BUILD_LINK_SCHEME = $(1) $(2) $(3)$(if $(strip $(4)), $(4))$(if $(strip $(
 # @param $(2) The object files list.
 # @param $(3) The resource files list.
 # @param $(4) The libraries list.
-# @param $(5) The character configuration type.
-# @param $(6) The debuginfo configuration type.
+# @param $(5) The library configuration type.
+# @param $(6) The character configuration type.
+# @param $(7) The debuginfo configuration type.
 MXCPP_BUILD_LINK_STANDARD = $(call $(if $(strip $($(1)_SCHEME)),$(1)_SCHEME,MXCPP_BUILD_LINK_SCHEME),\
-$(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(6))),$(MXCPP_$(1)_FLAGS_$(6)) )$(if $(strip $($(1)_FLAGS_OPTIONS)),$($(1)_FLAGS_OPTIONS) ),$($(1)_OUT)$$@,$(2),$(3),$(4))
+$(MXCPP_$(1)_FLAGS) $(if $(strip $(MXCPP_$(1)_FLAGS_$(5))),$(MXCPP_$(1)_FLAGS_$(5)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(6))),$(MXCPP_$(1)_FLAGS_$(6)) )$(if $(strip $(MXCPP_$(1)_FLAGS_$(7))),$(MXCPP_$(1)_FLAGS_$(7)) )$(if $(strip $($(1)_FLAGS_OPTIONS)),$($(1)_FLAGS_OPTIONS) ),$($(1)_OUT)$$@,$(2),$(3),$(4))
 
 #$(if $(strip $($(1)_SCHEME)),$(call $(1)_SCHEME,$($(1)),,$(2),$(3),$(4)),\
 #$(error The build scheme is not defined for the $(1) linker!))
@@ -248,16 +249,17 @@ MXCPP_BUILD_LIB = $(MXCPP_LIBC_FLAGS) $(if $(strip $(MXCPP_LIBC_FLAGS_$(2))),$(M
 # @param $(3) The libraries list.
 # @param $(4) The character configuration type.
 # @param $(5) The debuginfo configuration type.
-MXCPP_BUILD_DLL = $(call MXCPP_BUILD_LINK_STANDARD,DLLC,$(1),$(2),$(3),$(4),$(5))
+MXCPP_BUILD_DLL = $(call MXCPP_BUILD_LINK_STANDARD,DLLC,$(1),$(2),$(3),,$(4),$(5))
 
 # The command for building exeutables.
 #
 # @param $(1) The object files list.
 # @param $(2) The resource files list.
 # @param $(3) The libraries list.
-# @param $(4) The character configuration type.
-# @param $(5) The debuginfo configuration type.
-MXCPP_BUILD_EXE = $(call MXCPP_BUILD_LINK_STANDARD,LNKC,$(1),$(2),$(3),$(4),$(5))
+# @param $(4) The library configuration type.
+# @param $(5) The character configuration type.
+# @param $(6) The debuginfo configuration type.
+MXCPP_BUILD_EXE = $(call MXCPP_BUILD_LINK_STANDARD,LNKC,$(1),$(2),$(3),$(4),$(5),$(6))
 
 
 # EOF #
