--- a/make/unix/aix/system.ini
+++ b/make/unix/aix/system.ini
@@ -27,4 +27,8 @@ $(MXCPP_LIBS_COMPILER)
 # Include parent definitions.
 include ../../platform.ini
 
+# AIX has currently problems with static libraries.
+# Building shared libraries only.
+MXCPP_TARGET_TYPE_SHARE := DLL
+
 # EOF #
