--- a/make/unix/hp-ia/gcc32/makefile
+++ b/make/unix/hp-ia/gcc32/makefile
@@ -24,6 +24,9 @@ endef
 $(if $(strip $(MAKEFILE_LIST)),,$(eval $(call MXCPP_GMAKE_OLD)))
 
 
+# The target flags.
+CFLAGS_TARGET_MT := -pthread
+
 # Include default GCC definitions.
 include ../../../setup/gcc.ini
 
