--- a/make/unix/hp-ia/gcc64/makefile
+++ b/make/unix/hp-ia/gcc64/makefile
@@ -26,6 +26,7 @@ $(if $(strip $(MAKEFILE_LIST)),,$(eval $(call MXCPP_GMAKE_OLD)))
 
 # The target flags.
 CFLAGS_TARGET := -mlp64
+CFLAGS_TARGET_MT := -pthread
 
 # Include default GCC definitions.
 include ../../../setup/gcc.ini
