--- a/make/unix/setup/acc.ini
+++ b/make/unix/setup/acc.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - GNU C++ (GCC) compiler (definitions).
+#     - HP C++ (aCC) compiler (definitions).
 #
 # @author Emil Maskovsky
 #
@@ -20,7 +20,7 @@ OBJ_SFX := o
 # ANSI-C compiler settings.
 
 # The compiler executable.
-CC := gcc
+CC := cc
 
 # The warning output file.
 # ('0' or '' for stdout, '2' for stderr)
@@ -29,7 +29,7 @@ CC_WARNING_FILE := 2
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
 # overridden on the make command line)
-CFLAGS := $(CFLAGS_TARGET) -Winline
+CFLAGS := $(CFLAGS_TARGET) -z
 # -Winvalid-pch
 
 # Output name flag.
@@ -42,22 +42,16 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -g3 -Wall -Wundef -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Wconversion -Waggregate-return -Wmissing-noreturn -Wredundant-decls
-# -Wextra -Wfloat-equal -Wendif-labels -Wmissing-format-attribute -Wpacked -Wpadded -Wunreachable-code
-CFLAGS_DEBUG_EXTRA := -Wtraditional -Wbad-function-cast -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs
-# -Wdeclaration-after-statement -Wold-style-definition
-CFLAGS_RELEASE := -O2
-# -Wdisabled-optimization
-CFLAGS_LIB :=
-CFLAGS_LIBMT := $(CFLAGS_TARGET_MT)
-CFLAGS_DLL := $(CFLAGS_TARGET_MT)
-CFLAGS_DLL_DLL := -fPIC
+CFLAGS_DEBUG := -g +w
+CFLAGS_RELEASE := -w +O3
+# +O4 +Oall
+CFLAGS_DLL_DLL := +z
 
 
 # C++ compiler settings.
 
 # The compiler executable.
-CXX := g++
+CXX := aCC
 
 # The warning output file.
 # ('0' or '' for stdout, '2' for stderr)
@@ -66,7 +60,7 @@ CXX_WARNING_FILE := $(CC_WARNING_FILE)
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS) -fexceptions -frtti
+CXXFLAGS := $(CFLAGS)
 
 # Output name flag.
 CXX_OUT := $(CC_OUT)
@@ -78,43 +72,9 @@ CXX_DEFINE := $(CC_DEFINE)
 CXX_INCLUDE := $(CC_INCLUDE)
 
 # Flags for different build configurations.
-CXXFLAGS_DEBUG := $(CFLAGS_DEBUG) -Wreorder -Wold-style-cast -Woverloaded-virtual -Wsign-promo -Wsynth
-# -Wabi
+CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
-CXXFLAGS_LIB := $(CFLAGS_LIB)
-CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
-CXXFLAGS_DLL := $(CFLAGS_DLL)
 CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
-
-
-CFLAGS_DEBUG += $(CFLAGS_DEBUG_EXTRA)
-
-
-# Resource compiler settings.
-
-# The compiler executable.
-RC := windres
-
-# The warning output file.
-# ('0' or '' for stdout, '2' for stderr)
-RC_WARNING_FILE := $(CXX_WARNING_FILE)
-
-# Suffix of compiled resource files.
-# (cannot be empty, if RC defined)
-RES_SFX := $(OBJ_SFX)
-
-# The compiler global flags.
-# (used standardized name RCFLAGS, which can be
-# overridden on the make command line)
-RCFLAGS :=
-
-# Output name flag.
-RC_OUT := -o
-
-# Macro definition flag.
-RC_DEFINE := -D
-# Include directory flag.
-RC_INCLUDE := -I
 
 
 ##########################
@@ -155,8 +115,6 @@ LNKC_OUT := $(CXX_OUT)
 # Flags for different build configurations.
 LNKC_FLAGS_DEBUG := $(CXXFLAGS_DEBUG)
 LNKC_FLAGS_RELEASE := $(CXXFLAGS_RELEASE)
-LNKC_FLAGS_LIB := $(CXXFLAGS_LIB)
-LNKC_FLAGS_LIBMT := $(CXXFLAGS_LIBMT)
 LNKC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_EXE)
 
 LNKC_LIB_PFX := -l
@@ -194,7 +152,7 @@ DLLC_WARNING_FILE := $(LNKC_WARNING_FILE)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LNKC_FLAGS) -shared $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_DLL)
+DLLC_FLAGS := $(LNKC_FLAGS) -b $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_DLL)
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
