--- a/make/unix/setup/xlc.ini
+++ b/make/unix/setup/xlc.ini
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - IBM AIX (xlC) compiler (definitions).
+#     - IBM VisualAge C++ (xlC) compiler (definitions).
 #
 # @author Emil Maskovsky
 #
@@ -20,7 +20,7 @@ OBJ_SFX := o
 # ANSI-C compiler settings.
 
 # The compiler executable.
-CC := xlC_r
+CC := xlc
 
 # The compiler global flags.
 # (used standardized name CFLAFS, which can be
@@ -37,20 +37,23 @@ CC_DEFINE := -D
 CC_INCLUDE := -I
 
 # Flags for different build configurations.
-CFLAGS_DEBUG := -Wall -g3
-CFLAGS_RELEASE := -w -O2
-CFLAGS_DLL_DLL :=
+CFLAGS_DEBUG := -g
+CFLAGS_RELEASE := -w -qinline -O3 -qstrict
+CFLAGS_LIB := -qnothreaded
+CFLAGS_LIBMT := -qthreaded
+CFLAGS_DLL := -qthreaded
+CFLAGS_DLL_DLL := -qpic
 
 
 # C++ compiler settings.
 
 # The compiler executable.
-CXX := $(CC)
+CXX := xlC
 
 # The compiler global flags.
 # (used standardized name CXXFLAGS, which can be
 # overridden on the make command line)
-CXXFLAGS := $(CFLAGS)
+CXXFLAGS := $(CFLAGS) -qeh -qrtti
 
 # Output name flag.
 CXX_OUT := $(CC_OUT)
@@ -64,6 +67,9 @@ CXX_INCLUDE := $(CC_INCLUDE)
 # Flags for different build configurations.
 CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
+CXXFLAGS_LIB := $(CFLAGS_LIB)
+CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
+CXXFLAGS_DLL := $(CFLAGS_DLL)
 CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
 
 
@@ -74,7 +80,9 @@ CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
 # The linker global flags.
 # (used standardized name LDFLAGS, which can be
 # overridden on the make command line)
-LDFLAGS := -L. -brtl
+LDFLAGS := -L.
+# -bnoquiet
+# -brtl
 
 # Prefix of object libraries.
 # (can be empty)
@@ -101,7 +109,9 @@ LNKC_OUT := $(CXX_OUT)
 # Flags for different build configurations.
 LNKC_FLAGS_DEBUG := $(CXXFLAGS_DEBUG)
 LNKC_FLAGS_RELEASE := $(CXXFLAGS_RELEASE)
-LNKC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_EXE)
+LNKC_FLAGS_LIB := $(CXXFLAGS_LIB)
+LNKC_FLAGS_LIBMT := $(CXXFLAGS_LIBMT)
+LNKC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_EXE) -brtl -bdynamic
 
 LNKC_LIB_PFX := -l
 
@@ -112,7 +122,7 @@ LNKC_LIB_PFX := -l
 LIBC := ar
 
 # The librarian global flags.
-LIBC_FLAGS := r
+LIBC_FLAGS := -r
 
 # Output name flag.
 LIBC_OUT :=
@@ -130,7 +140,7 @@ DLL_PFX := $(LIB_PFX)
 # The linker global flags.
 # (includes standard name LDFLAGS, which can be
 # overridden on the make command line)
-DLLC_FLAGS := $(LNKC_FLAGS) -p 5000 -bnoentry -qmkshrobj
+DLLC_FLAGS := $(LNKC_FLAGS) -qmkshrobj -bnoentry $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_DLL)
 
 # Output name flag.
 DLLC_OUT := $(LNKC_OUT)
@@ -138,7 +148,6 @@ DLLC_OUT := $(LNKC_OUT)
 # Flags for different build configurations.
 DLLC_FLAGS_DEBUG := $(LNKC_FLAGS_DEBUG)
 DLLC_FLAGS_RELEASE := $(LNKC_FLAGS_RELEASE)
-DLLC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_DLL)
 
 
 # Addditional clean masks for 'clean...' targets.
