--- a/make/unix/aix/xlc32/makefile
+++ b/make/unix/aix/xlc32/makefile
@@ -2,7 +2,7 @@
 # @file
 #
 # Makefile for the Demo C++ Framework project
-#     - IBM AIX (xlC) compiler (AIX 32-bit).
+#     - IBM VisualAge C++ (xlC) compiler (AIX 32-bit).
 #
 # @author Emil Maskovsky
 #
