--- a/make/unix/setup/acc.ini
+++ b/make/unix/setup/acc.ini
@@ -45,6 +45,9 @@ CC_INCLUDE := -I
 CFLAGS_DEBUG := -g +w
 CFLAGS_RELEASE := -w +O3
 # +O4 +Oall
+CFLAGS_LIB :=
+CFLAGS_LIBMT := -mt
+CFLAGS_DLL := -mt
 CFLAGS_DLL_DLL := +z
 
 
@@ -74,6 +77,9 @@ CXX_INCLUDE := $(CC_INCLUDE)
 # Flags for different build configurations.
 CXXFLAGS_DEBUG := $(CFLAGS_DEBUG)
 CXXFLAGS_RELEASE := $(CFLAGS_RELEASE)
+CXXFLAGS_LIB := $(CFLAGS_LIB)
+CXXFLAGS_LIBMT := $(CFLAGS_LIBMT)
+CXXFLAGS_DLL := $(CFLAGS_DLL)
 CXXFLAGS_DLL_DLL := $(CFLAGS_DLL_DLL)
 
 
@@ -115,6 +121,8 @@ LNKC_OUT := $(CXX_OUT)
 # Flags for different build configurations.
 LNKC_FLAGS_DEBUG := $(CXXFLAGS_DEBUG)
 LNKC_FLAGS_RELEASE := $(CXXFLAGS_RELEASE)
+LNKC_FLAGS_LIB := $(CXXFLAGS_LIB)
+LNKC_FLAGS_LIBMT := $(CXXFLAGS_LIBMT)
 LNKC_FLAGS_DLL := $(CXXFLAGS_DLL) $(CXXFLAGS_DLL_EXE)
 
 LNKC_LIB_PFX := -l
